pep8_tutorial/_build/html/reports/ch02_09_programing_recommendations.log
Traceback (most recent call last):
  File "/home/kafa46/anaconda3/envs/book_writing/lib/python3.7/site-packages/jupyter_cache/executors/utils.py", line 56, in single_nb_execution
    record_timing=False,
  File "/home/kafa46/anaconda3/envs/book_writing/lib/python3.7/site-packages/nbclient/client.py", line 1093, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/home/kafa46/anaconda3/envs/book_writing/lib/python3.7/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/home/kafa46/anaconda3/envs/book_writing/lib/python3.7/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/home/kafa46/anaconda3/envs/book_writing/lib/python3.7/asyncio/base_events.py", line 587, in run_until_complete
    return future.result()
  File "/home/kafa46/anaconda3/envs/book_writing/lib/python3.7/site-packages/nbclient/client.py", line 560, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "/home/kafa46/anaconda3/envs/book_writing/lib/python3.7/site-packages/nbclient/client.py", line 854, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/home/kafa46/anaconda3/envs/book_writing/lib/python3.7/site-packages/nbclient/client.py", line 756, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
if foo is not None:
------------------

[0;36m  File [0;32m"/tmp/ipykernel_1204880/3019764398.py"[0;36m, line [0;32m1[0m
[0;31m    if foo is not None:[0m
[0m                       ^[0m
[0;31mSyntaxError[0m[0;31m:[0m unexpected EOF while parsing

SyntaxError: unexpected EOF while parsing (3019764398.py, line 1)

